[metadata]
name = SPHEREx-Visualizer-Lite
description = Automatically creates coverage plots for SPHEREx.
url = https://github.com/SPHEREx/SPHEREx-CoveragePlot
author = Sean Bryan
author-email = sean.a.bryan@asu.edu

[options]
zip_safe = True
package_dir=
    =py_src
packages = find:
include_package_data = True
python_requires = >=3.8.5
setup_requires =
    setuptools >=46.4.0
install_requires =
    astropy >=3.2.1
    numpy >=1.21.4
    astropy-healpix >=0.4
    gdown >=3.12.2
    healpy >=1.13.0
    pandas >=1.1.4
    spiceypy >=4.0.0

[options.packages.find]
where = py_src

[options.entry_points]
console_scripts =
    spx_visualizer = spherex_visualizer_lite.cli.spx_visualizer:main

